[gd_scene load_steps=2 format=3 uid="uid://dmk3pdx3664rx"]

[ext_resource type="Script" uid="uid://c45org1qm0dwr" path="res://screens/connecting_menu.gd" id="1_pbjje"]

[node name="ConnMenu" type="Node2D"]
script = ExtResource("1_pbjje")

[node name="PanelMain" type="Panel" parent="."]
offset_right = 480.0
offset_bottom = 270.0

[node name="ServerIP" type="LineEdit" parent="PanelMain"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -58.5
offset_right = 69.0
offset_bottom = -23.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "IP Address"
max_length = 30
emoji_menu_enabled = false

[node name="Port" type="LineEdit" parent="PanelMain"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -17.5
offset_right = 69.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Port"
max_length = 7
emoji_menu_enabled = false

[node name="ButtonConnect" type="Button" parent="PanelMain"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = 30.5
offset_right = 69.0
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
text = "Connect"

[connection signal="pressed" from="PanelMain/ButtonConnect" to="." method="_on_button_connect_pressed"]
